# simploader

./: .gitignore  CMakeLists.txt  README.md  adddownload.cpp  adddownload.h  adddownload.ui  adddownload.ui.autosave  downloader.cpp  downloader.h  downloadhistoryentry.h  downloadprogressdialog.cpp  downloadprogressdialog.h  downloadprogresswidget.cpp  downloadprogresswidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
